--- a/app/src/main/res/layout/list_item_product.xml
+++ b/app/src/main/res/layout/list_item_product.xml
@@ -1,22 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?listItemBackground"
-    xmlns:tools="http://schemas.android.com/tools">
+    tools:layout_editor_absoluteY="25dp"
+    android:paddingTop="4dp">
+
+    <eu.davidea.flipview.FlipView
+        android:id="@+id/flipViewIcon"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="4dp"
+        android:clickable="true"
+        android:inAnimation="@anim/grow_from_middle_x_axis"
+        android:outAnimation="@anim/grow_from_middle_x_axis"
+        app:checked="false"
+        app:enableInitialAnimation="false"
+        app:frontBackgroundColor="@android:color/transparent"
+        app:frontImage="@drawable/ic_check_box_unchecked"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:rearBackgroundColor="@android:color/transparent"
+        app:rearImage="@drawable/ic_check_box_checked"
+        app:rearImageAnimationDelay="100"
+        tools:ignore="KeyboardInaccessibleWidget" />
 
     <com.yoshione.fingen.tag.TagView
         android:id="@+id/layoutTagView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
         android:clickable="false"
         android:focusable="false"
         android:gravity="end"
         app:layout_constraintEnd_toStartOf="@+id/imageButtonDeleteProduct"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textViewProductName"
         app:layout_constraintTop_toTopOf="parent"
         tools:background="@color/blue_color"
         tools:layout_height="16dp">
@@ -24,28 +44,10 @@
 
     </com.yoshione.fingen.tag.TagView>
 
-    <!--<TextView-->
-        <!--android:id="@+id/textViewCategoryName"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="4dp"-->
-        <!--android:background="@drawable/rounded_corner"-->
-        <!--android:ellipsize="middle"-->
-        <!--android:fontFamily="sans-serif-medium"-->
-        <!--android:includeFontPadding="false"-->
-        <!--android:singleLine="true"-->
-        <!--android:textSize="@dimen/text_size_micro"-->
-        <!--android:textStyle="normal"-->
-        <!--app:layout_constraintEnd_toStartOf="@+id/imageButtonDeleteProduct"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--tools:text="кафе" />-->
-
     <TextView
         android:id="@+id/textViewProductName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
         android:ellipsize="end"
         android:fontFamily="sans-serif-light"
         android:maxLines="1"
@@ -53,13 +55,15 @@
         android:textSize="@dimen/text_size_small"
         android:textStyle="normal"
         app:layout_constraintEnd_toStartOf="@+id/imageButtonDeleteProduct"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/flipViewIcon"
         app:layout_constraintTop_toBottomOf="@+id/layoutTagView"
-        tools:text="Зефир Ванильный Каравай глазированный 500гр" />
+        tools:text="Зефир Ванильный
+" />
 
     <ImageButton
         android:id="@+id/imageButtonDeleteProduct"
         style="@style/ClearButtonStyle"
+        android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -70,7 +74,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:layout_marginTop="4dp"
         android:fontFamily="sans-serif-medium"
         android:textColor="?android:textColor"
         android:textSize="@dimen/text_size_micro"
