--- a/app/src/main/res/layout/content_filter_card_header.xml
+++ b/app/src/main/res/layout/content_filter_card_header.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:background="?listDividerBackground"
         android:ellipsize="end"
+        android:lines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text_view_not"
         app:layout_constraintStart_toEndOf="@+id/buttonDelete"
