--- a/app/src/main/res/layout/list_item_account_2.xml
+++ b/app/src/main/res/layout/list_item_account_2.xml
@@ -90,9 +90,9 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/progres_bar_layout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="?vertical_spacimg_tr_list"
+        android:layout_height="20dp"
         android:layout_marginBottom="?vertical_spacimg_tr_list"
+        android:layout_marginTop="?vertical_spacimg_tr_list"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toEndOf="@+id/imageViewAccountIcon"
@@ -118,13 +118,13 @@
             android:background="@android:color/transparent"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
+            android:shadowColor="#000000"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
             android:textSize="@dimen/text_size_pico"
             android:textStyle="normal"
             android:visibility="visible"
-            android:shadowColor="#000000"
-            android:shadowDx="1.5"
-            android:shadowDy="1.5"
-            android:shadowRadius="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
