--- a/app/src/main/res/layout/activity_edit_transaction.xml
+++ b/app/src/main/res/layout/activity_edit_transaction.xml
@@ -24,6 +24,7 @@
         app:layout_constraintTop_toBottomOf="@+id/include_toolbar">
 
         <LinearLayout
+            android:id="@+id/layoutRoot"
             style="@style/ElementLayout"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true">
@@ -112,19 +113,25 @@
             </android.support.design.widget.TextInputLayout><!--Account-->
             <!--</android.support.v7.widget.CardView>-->
 
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tabLayoutType"
+            <LinearLayout
+                android:id="@+id/layoutPayeeOrDestAcc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                app:tabIndicatorColor="@color/ColorPrimary"
-                app:tabSelectedTextColor="@color/ColorPrimary" />
+                android:orientation="vertical">
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/tabLayoutType"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    app:tabIndicatorColor="@color/ColorPrimary"
+                    app:tabSelectedTextColor="@color/ColorPrimary" />
 
-            <com.yoshione.fingen.widgets.MyViewPager
-                android:id="@+id/te_pager_payee"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" /><!--Payee ViewPager-->
+                <com.yoshione.fingen.widgets.MyViewPager
+                    android:id="@+id/te_pager_payee"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" /><!--Payee ViewPager-->
+            </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/layoutCategory"
@@ -153,44 +160,51 @@
                     tools:ignore="ContentDescription" />
             </RelativeLayout><!--Location-->
 
-            <com.yoshione.fingen.widgets.AmountEditor
-                android:id="@+id/amount_editor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" /><!--Amount-->
 
-            <com.yoshione.fingen.widgets.AmountEditor
-                android:id="@+id/dest_amount_editor"
+            <LinearLayout
+                android:id="@+id/layoutAmounts"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" /><!--DestAmount-->
-
-            <RelativeLayout
-                android:id="@+id/layoutExchangeRate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/textInputLayoutExchangeRate"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <com.yoshione.fingen.widgets.AmountEditor
+                    android:id="@+id/amount_editor"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/ent_exchange_rate">
+                    android:layout_height="wrap_content" /><!--Amount-->
 
-                    <EditText
-                        android:id="@+id/edit_text_exchange_rate"
-                        style="@style/EditableEditText"
+                <com.yoshione.fingen.widgets.AmountEditor
+                    android:id="@+id/dest_amount_editor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" /><!--DestAmount-->
+
+                <RelativeLayout
+                    android:id="@+id/layoutExchangeRate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/textInputLayoutExchangeRate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="numberDecimal"
-                        android:selectAllOnFocus="true" />
-                </android.support.design.widget.TextInputLayout>
+                        android:hint="@string/ent_exchange_rate">
 
-                <ImageButton
-                    android:id="@+id/imageButtonInvertExRate"
-                    style="@style/ClearButtonStyle"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    tools:ignore="ContentDescription"
-                    android:src="@drawable/ic_import_export_blue"/>
-            </RelativeLayout><!--ExchangeRate-->
+                        <EditText
+                            android:id="@+id/edit_text_exchange_rate"
+                            style="@style/EditableEditText"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="numberDecimal"
+                            android:selectAllOnFocus="true" />
+                    </android.support.design.widget.TextInputLayout>
+
+                    <ImageButton
+                        android:id="@+id/imageButtonInvertExRate"
+                        style="@style/ClearButtonStyle"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        tools:ignore="ContentDescription"
+                        android:src="@drawable/ic_import_export_blue"/>
+                </RelativeLayout><!--ExchangeRate-->
+            </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/layoutSms"
@@ -337,6 +351,7 @@
             </RelativeLayout><!--Location-->
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/layoutComment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/ent_comment">
