--- a/app/src/main/res/layout/list_item_tree_model_2.xml
+++ b/app/src/main/res/layout/list_item_tree_model_2.xml
@@ -6,8 +6,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?listItemBackground"
-    android:foreground="?attr/selectableItemBackground">
+    android:background="?listItemBackground">
 
     <eu.davidea.flipview.FlipView
         android:id="@+id/drag_handle"
