--- a/app/src/main/res/menu/menu_transaction_editor.xml
+++ b/app/src/main/res/menu/menu_transaction_editor.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_tune_editor"
-        android:title="@string/act_tune_editor"
+        android:id="@+id/action_customize_layout"
+        android:title="@string/pref_title_tredit_layout_constructor"
         app:showAsAction="never" />
 </menu>
